[package]
name = "growth_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
env_logger = "0.11.5"
wgpu = "23.0.1"
pollster = "0.4.0"
thiserror = "2.0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }
